[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = vr.events
author = Brent Tubbs
author_email = brent.tubbs@gmail.com
description = Streaming event processing for Velociraptor
long_description = file:README.rst
url = https://github.com/yougov/vr.events
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	vr.common>=6
	six
	redis>=2.4.13
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	backports.unittest_mock

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
